Remove unused feedback endpoints
